# easysql

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  dbhub.toml  dbhub.toml.example  docker-compose.dbhub.yml  docker-compose.yml  llm_plan.md  main.py  pyproject.toml  requirements.txt  task.md  test_stream_mock.py  ui_preview.html
alembic/: env.py
alembic/versions/: 0001_create_session_tables.py  0002_split_turns_table.py  0003_add_config_table.py
docs/: ENVIRONMENT.md  README_EN.md  index.html
easysql/: __init__.py  config.py  main.py
easysql-frontend/test/: index.html
easysql-web/: index.html  package-lock.json  package.json
easysql-web/src/: App.tsx  index.css
easysql/code_context/: __init__.py  chunker.py  factory.py
easysql/context/: __init__.py  base.py  builder.py  db_specific_rules.py  models.py  templates.py
easysql/embeddings/: base.py  (+6 more)
easysql_api/: __init__.py  app.py  deps.py
easysql_web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
examples/: run_agent.py
migrations/: 001_create_session_tables.sql  002_add_few_shot_fields.sql  003_add_session_fields.sql  004_add_message_thread_fields.sql
tests/: __init__.py  index.html  test_cache_invalidator.py  test_code_context.py  test_code_context_chunker.py  test_code_context_integration.py  test_config_router.py  test_config_schema.py  test_config_service.py  test_context_builder.py  test_e2e_pipeline.py  test_full_retrieval.py  test_langfuse_config.py  test_llm_integration.py  test_llm_model_selection.py  test_llm_temperature_configurable.py  test_multi_turn_conversation.py  test_query_service_graph_pinning.py  test_retrieval_service.py  test_semantic_search.py  test_session_store_messages.py  test_sql_agent_stream.py  verify_factory.py  verify_sqlalchemy_extractor.py
(+231 files in other folders)
